[tool.poetry]
name = "luna-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
python-dotenv = "^1.0.1"
yt-dlp = "^2024.8.6"
PyNaCl = "^1.5.0"
google-api-python-client = "^2.142.0"
ffmpeg = "^1.4"
jishaku = "^2.5.2"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
